Fix memory buttons and dark mode

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@
   --drop-shadow-btn: green;
 }
 
-/* Light mode styles */
 .light-mode {
   --background-color: beige;
   --text-color: #222222;
@@ -47,10 +46,10 @@
   --box-shadow-darkest: rgba(0, 0, 0, 0.5);
   --box-shadow-darker: rgba(0, 0, 0, 0.4);
   --box-shadow-dark: rgba(0, 0, 0, 0.2);
+  --border-color: rgb(161, 161, 161);
   --drop-shadow-btn: green;
 }
 
-/* Dark mode styles */
 .dark-mode {
   --background-color: #0a0a23;
   --text-color: #ced4e2;
@@ -70,10 +69,12 @@
   --bksp-bg-color: #ffff00;
   --bksp-txt-color: rgb(0, 0, 0);
   --box-shadow: rgb(64, 64, 64);
-  --border-color: gainsboro;
+  --box-shadow-darkest: rgba(0, 0, 0, 0.5);
+  --box-shadow-darker: rgba(0, 0, 0, 0.4);
+  --box-shadow-dark: rgba(0, 0, 0, 0.2);
+  --border-color: rgb(185, 185, 185);
   --drop-shadow-btn: magenta;
 }
-
 
 * {
   font-family: "IBM Plex Mono", monospace;
@@ -98,14 +99,12 @@ body {
   color: var(--text-color);
 }
 
-
-
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   background: linear-gradient(145deg, #757575, #424242);
-  border: 4px outset var(--border-color);
+  border: 6px outset var(--border-color);
   border-radius: 10px;
   padding: 16px 18px;
   box-shadow: 0 8px 16px var(--box-shadow-darkest);
@@ -163,7 +162,8 @@ body {
   color: var(--equals-txt-color);
 }
 
-.button.special.memory {
+.button.memory,
+.button.clear {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -198,7 +198,7 @@ body {
   filter: brightness(0.8);
 }
 
-button#allClear {
+#allClear {
   grid-column: 5;
   display: flex;
   align-items: center;
@@ -207,11 +207,9 @@ button#allClear {
   color: var(--ac-txt-color);
   border-radius: 5px;
   height: 80%;
-  box-shadow: 0 4px var(--box-shadow);
+  box-shadow: 2px 2px var(--box-shadow);
   cursor: pointer;
 }
-
-
 
 #calcLogo {
   display: flex;
@@ -230,21 +228,6 @@ button#allClear {
   text-align: center;
   font-weight: 900;
   font-size: 1.5em;
-}
-
-
-@keyframes blink {
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0.2;
-  }
-
-  100% {
-    opacity: 1;
-  }
 }
 
 .display-blink {
@@ -308,4 +291,18 @@ button#allClear {
 #color-scheme-toggle.dark-mode span:nth-child(2) {
   left: 65px;
   background-color: cyan
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.2;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
